--- a/TicketMvp/src/main/webapp/resources/css/ReserveChoose.css
+++ b/TicketMvp/src/main/webapp/resources/css/ReserveChoose.css
@@ -1,50 +1,153 @@
 @charset "UTF-8";
 
+body {
+    background-color: #f8f8f8; 
+}
 
-.list-group {
-	width: 400px !important;
+body, html {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
 
 .list-group-item {
-	margin-top: 10px;
-	border-radius: none;
-	cursor: pointer;
-	transition: all 0.3s ease-in-out;
-	margin-bottom: 20px;
+    margin-top: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    margin-bottom: 20px;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-
 .list-group-item:hover {
-	transform: scaleX(1.1);
-	background-color: #cccccc;
+    transform: scaleX(1.05);
+    background-color: #f5f5f5;
 }
 
 .list-group-item.active {
-    background-color: #808080; 
-    color: white; 
+    background-color: #007bff;
+    color: #fff;
 }
 
-.check {
-	opacity: 0;
-	transition: all 0.6s ease-in-out;
+.list-group-item img.soccer-ticket {
+    width: 50px;
+}
+
+.list-group-item .ticket-info {
+    font-size: 12px;
+    color: #555;
+}
+
+.list-group-item{
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.ticket-info span.price {
+    color: #007bff;
+    font-weight: bold;
+}
+
+.message-container {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+    background-color: #f4f4f4;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.row {
+    display: flex;
+}
+
+#reserveTicketList, #reserveSide {
+    margin-right: 20px;
+}
+
+#reserveTicketList {
+    flex: 70;
+    margin-right: 20px;
+    max-height: 625px;
+    overflow-y: auto; 
 }
 
 
-.ticket-info span {
-	font-size: 12px;
-	margin-right: 10px;
+#reserveSide {
+    flex: 30;
+    max-width: 300px;
+    overflow: hidden;
+    border: none;
+    padding: 10px; 
 }
 
-img.soccer-ticket {
-	width: 50px;
+
+#reserveSideContent {
+    padding: 10px;
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+
 }
 
-div.ml-2 {
-	color: black;
+
+#reserveSideContent #stadium {
+	margin-top: 10px;
+    max-width: 100%; 
 }
 
-button.reserve {
-	position: absolute;
-	bottom: 4%;
-	right: 2%;
+#stadiumMap, #matchDate, #pickQuantity {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 20px; 
+}
+
+button#purchase {
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+button#purchase:hover {
+    background-color: #0056b3; 
+}
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 999;
+    text-align: center;
+}
+
+#stadiumPopupImage {
+    max-width: 80%;
+    max-height: 80%;
+    margin: auto;
+    position: absolute;
+    top: 0; bottom: 0; left: 0; right: 0;
+}
+
+
+img#stadium:hover {
+    cursor: pointer; 
+}
+
+.hidden-input {
+    display: none;
 }
