--- a/TicketMvp/src/main/webapp/resources/css/main.css
+++ b/TicketMvp/src/main/webapp/resources/css/main.css
@@ -1,4 +1,4 @@
-body, h1, h2, h3, p {
+.body, h1, h2, h3, p {
     margin: 0;
     padding: 0;
 }
@@ -10,35 +10,29 @@ body {
 }
 
 .header {
-    background-color: #fff;
+	background-color: skyblue;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column; /* 컨텐츠를 세로로 배치 */
+    align-items: center; /* 가운데 정렬 */
     padding: 20px;
 }
 
 .header_inner {
-    display: flex;
-    align-items: center;
-}
-
-.header_util_inner {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    margin-top: 20px; /* 상단 여백 추가 */
 }
 
 .header_util_right {
-    margin-right: -12px;
     display: flex;
-    align-items: center;
+    flex-direction: row; /* 로그인 및 메뉴 항목을 가로로 배치 */
+    align-items: center; /* 가운데 정렬 */
+    margin-left: auto; /* 오른쪽으로 이동 */
+    margin-top: 20px; /* 상단 여백 추가 */
 }
-
 
 .header_util_list {
     list-style: none;
     padding: 0;
-    display: flex;
+    display: flex; /* 메뉴 항목들을 가로로 배치하기 위해 추가 */
 }
 
 .header_util {
@@ -48,18 +42,8 @@ body {
 .header_util_item {
     display: inline-block;
     position: relative;
+    padding: 0;
     margin-left: 20px;
-}
-
-.header_util_link {
-    text-decoration: none;
-    color: #fff;
-}
-
-.logo_black {
-    font-size: 35px;
-    text-decoration: none;
-    color: #000;
 }
 
 h1 {
@@ -79,7 +63,7 @@ main {
    padding-top: 15px;
 }
 .menu li {
-    padding: 20px 18px 20px 26px; /* 변경: 콜론으로 수정 */
+    padding 20px 18px 20px 26px;
     border-bottom: 1px solid #ecedf2;
     position: relative;
     box-sizing: border-box;
@@ -94,21 +78,20 @@ main {
 }
 
 .image-item {
-	border: 1px solid #ddd;
-	overflow: hidden;
-	border-radius: 10px;
-	text-align: center;
-	position: relative;
-	max-width: 100%; /* 이미지가 부모 너비를 넘지 않도록 최대 너비 설정 */
-	width: 100%; /* 이미지 너비 100% */
-					}
+    border: 1px solid #ddd;
+    overflow: hidden;
+    border-radius: 10px;
+    text-align: center;
+}
 
 .image-item img {
-	max-width: 100%; /* 이미지가 부모 너비를 넘지 않도록 최대 너비 설정 */
-	width: 100%; /* 이미지 너비 100% */
-	height: auto; /* 이미지 높이 자동 조정 */
-	display: block;
-					}
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
+    object-fit: cover;
+    max-height: 100%;
+    display: block;
+}
 
 .image-item.even {
     grid-column: span 2;
@@ -120,19 +103,6 @@ main {
     grid-row: span 1;
 }
 
-.image-item.even img,
-.image-item.odd img {
-    width: 100%; /* 이미지 너비를 100%로 설정하여 부모 요소의 크기에 맞게 조절합니다. */
-    height: 100%; /* 이미지 높이를 100%로 설정하여 부모 요소의 크기에 맞게 조절합니다. */
-}
-
 .image-item:hover img {
     transform: scale(1.05);
 }
-
-
-
-
-
-
-
