--- a/TicketMvp/src/main/webapp/resources/css/main.css
+++ b/TicketMvp/src/main/webapp/resources/css/main.css
@@ -1,173 +1,180 @@
 .body, h1, h2, h3, p {
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+	height: 100%;
+	margin: 0;
+	font-family: Nunito, -apple-system, BlinkMacSystemFont, "Segoe UI",
+		Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
+		"Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+	font-size: 1rem;
+	font-weight: 400;
+	line-height: 1.5;
+	color: #858796;
+	text-align: left;
+	background-color: #fff;
 }
 
-
 .header_inner {
-   display: flex;
-    align-items: center;
-    justify-content: space-between;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .logo {
-    margin-left: 10%; /* 로고를 오른쪽으로 20px 이동 */
-    width: 100%; /* 로고의 너비를 조절 */
-    max-width: 350px;
-    height: auto; /* 로고의 높이를 자동으로 조절하여 비율 유지 */
+	margin-left: 10%; /* 로고를 오른쪽으로 20px 이동 */
+	width: 100%; /* 로고의 너비를 조절 */
+	max-width: 350px;
+	height: auto; /* 로고의 높이를 자동으로 조절하여 비율 유지 */
 }
 
 .header_menu {
-    display: flex;
-    align-items: center;
-    margin-left: auto; /* 메뉴를 오른쪽에 배치 */
+	display: flex;
+	align-items: center;
+	margin-left: auto; /* 메뉴를 오른쪽에 배치 */
 }
 
 .header_util {
-    background: white;
-    margin-left: auto; /* 로그인 및 회원가입 메뉴를 오른쪽에 배치 */
-    padding-right: 20px; /* 오른쪽 여백 추가 */
-    display: flex;
-    align-items: center; /* 아이템을 세로 중앙 정렬 */
+	background: white;
+	margin-left: auto; /* 로그인 및 회원가입 메뉴를 오른쪽에 배치 */
+	padding-right: 20px; /* 오른쪽 여백 추가 */
+	display: flex;
+	align-items: center; /* 아이템을 세로 중앙 정렬 */
 }
 
 .header_util_right {
-    display: flex;
-    align-items: center;
-    margin-left: auto; /* 로그인 및 회원가입 메뉴를 오른쪽에 배치 */
-    margin-right: 20px; /* 오른쪽으로 20px 이동 */
+	display: flex;
+	align-items: center;
+	margin-left: auto; /* 로그인 및 회원가입 메뉴를 오른쪽에 배치 */
+	margin-right: 20px; /* 오른쪽으로 20px 이동 */
 }
 
-
 .header_util_item {
-    display: inline-block;
-    position: relative;
-    padding: 0;
-    margin-left: 20px; /* 각 메뉴 항목 사이의 간격 조절 */
+	display: inline-block;
+	position: relative;
+	padding: 0;
+	margin-left: 20px; /* 각 메뉴 항목 사이의 간격 조절 */
 }
 
 .header_util_list {
-    list-style: none;
-    padding: 0;
-    display: flex; /* 메뉴 항목들을 가로로 배치하기 위해 추가 */
+	list-style: none;
+	padding: 0;
+	display: flex; /* 메뉴 항목들을 가로로 배치하기 위해 추가 */
 }
 
 h1 {
-    font-size: 35px;
+	font-size: 35px;
 }
 
 /*메인 콘텐츠 설정*/
 #main {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    padding: 5%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: center;
+	padding: 5%;
 }
 
 .menu {
-    float: left;
-    width: 20%;
-    min-width: 150px; /*최소 너비 설정*/
-    padding-top: 15px;
-    margin-right:15%; /* 메뉴와 로고 사이의 간격 조절 */
+	float: left; /* 왼쪽으로 배치 */
+	width: 20%; /* 너비 조절 (원하는 크기로 조정) */
+	min-width: 150px; /* 최소 너비 설정 */
+	margin-right: 15px; /* 메뉴와 로고 사이의 간격 조절 */
 }
 
 .menu-container {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-right: 60px;
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	margin-right: 60px;
 }
 
-.menu li {
-    padding 2% 1.8% 2% 2.6%;
-    border-bottom: 1px solid #ecedf2;
-    position: relative;
-    box-sizing: border-box;
+.menu li {padding 2% 1.8% 2% 2.6%;
+	border-bottom: 1px solid #ecedf2;
+	position: relative;
+	box-sizing: border-box;
 }
 
+#image-grid {
+	background-color: #f8f9fc;
+    width: 100%;
+    overflow-x: hidden;
+	
+}
 
 .image-grid {
-    display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    grid-auto-rows: minmax(200px, auto);
-    gap: 10px; /* 그리드 아이템 사이의 간격 */
+/* 	display: grid;
+	grid-template-columns: repeat(8, 1fr);
+	gap: 10px; 그리드 아이템 사이의 간격을 조절
+	margin: 20px; 양 옆 여백을 추가 */
+	
+flex-direction: column!important;
 }
 
 .image-item {
-    border: 1px solid #ddd;
-    overflow: hidden;
-    border-radius: 10px;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: transform 0.2s; /* 확대 애니메이션 효과 */
-    min-width: 100%; /* 이미지를 화면 너비에 맞춤 */
-    min-height: 0; /* 이미지 높이 유연성을 유지 */
+	border: 1px solid #ddd;
+	overflow: hidden;
+	border-radius: 10px;
+	text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transition: transform 0.2s; /* 확대 애니메이션 효과 */
+	width: 100%; /* 가로 크기를 100%로 유지 */
+	min-width: 100px; /* 최소 너비를 150px로 설정 (원하는 크기로 조정) */
+	min-height: 100px; /* 최소 높이를 150px로 설정 (원하는 크기로 조정) */
 }
 
 .image-item img {
-  width: 100%;
-  height: auto
-  max-width: 100%;
-  max-height: 100%;
-  display: block;
+	width: 100%;
+	height: 100%; max-width : 100%;
+	max-height: 100%;
+	display: block;
+	max-width: 100%;
 }
 
- .even {
-    grid-column: span 2; /* 2열 차지 */
-    grid-row: span 2; /* 2행 차지 */
-    min-width: 400px; /* 최소 너비 설정 (원하는 크기로 조정) */
-    min-height: 200px; /* 최소 높이 설정 (원하는 크기로 조정) */
-    width: 100%; /* 가로 크기를 100%로 유지 */
-    height: auto; /* 높이를 자동으로 조정하여 가로 세로 비율 유지 */
+.even {
+	grid-column: span 2; /* 2열 차지 */
+	grid-row: span 2; /* 2행 차지 */
+	min-width: 200px; /* .even 클래스의 최소 너비를 400px로 설정 */
+	min-height: 100px; /* .even 클래스의 최소 높이를 200px로 설정 */
 }
 
- .odd {
-    grid-column: span 2; /* 2열 차지 */
-    grid-row: span 1; /* 1행 차지 */
-    min-width: 400px; /* 최소 너비 설정 (원하는 크기로 조정) */
-    min-height: 200px; /* 최소 높이 설정 (원하는 크기로 조정) */
-    width: 100%; /* 가로 크기를 100%로 유지 */
-    height: auto; /* 높이를 자동으로 조정하여 가로 세로 비율 유지 */
+.odd {
+	grid-column: span 2; /* 2열 차지 */
+	grid-row: span 1; /* 1행 차지 */
+	min-width: 100px; /* .odd 클래스의 최소 너비를 200px로 설정 */
+	min-height: 100px; /* .odd 클래스의 최소 높이를 200px로 설정 */
 }
-
 
 .image-item:hover img {
-    transform: scale(1.05);
+	transform: scale(1.05);
 }
-
 
 /* Footer Styles */
 .footer {
-    background-color: #333;
-    color: white;
-    padding: 20px;
+	background-color: #333;
+	color: white;
+	padding: 20px;
 }
 
 .footer_inner {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .footer_links ul {
-    list-style: none;
-    padding: 0;
-    display: flex;
+	list-style: none;
+	padding: 0;
+	display: flex;
 }
 
 .footer_links li {
-    margin-right: 20px;
+	margin-right: 20px;
 }
 
 .footer a {
@@ -175,25 +182,81 @@ h1 {
 }
 
 .footer_logo {
-    font-weight: bold;
-    font-size: 24px;
+	font-weight: bold;
+	font-size: 24px;
 }
 
-@media (max-width: 768px) {
-  .image-grid {
-    grid-template-columns: repeat(4, 1fr); /* 4열로 변경 */
-    gap: 5px; /* 그리드 아이템 사이의 간격 조절 */
-  }
-
-  .image-item {
-    min-width: 200px; /* 최소 너비 조절 */
-    min-height: 200px; /* 최소 높이 조절 */
-  }
-  
-  .even,
-  .odd {
-    min-width: 200px; /* 최소 너비 조절 */
-    min-height: 200px; /* 최소 높이 조절 */
-  }
-  
+@media ( max-width : 768px) {
+	.image-grid {
+		grid-template-columns: repeat(4, 1fr); /* 4열로 변경 */
+		gap: 5px; /* 그리드 아이템 사이의 간격 조절 */
+	}
+	.image-item {
+		min-width: 200px; /* 최소 너비 조절 */
+		min-height: 200px; /* 최소 높이 조절 */
+	}
+	.even, .odd {
+		min-width: 200px; /* 최소 너비 조절 */
+		min-height: 200px; /* 최소 높이 조절 */
+	}
 }
+
+
+.sidebar {
+    width: 6.5rem;
+    min-height: 100vh;
+}
+
+.bg-gradient-primary {
+    background-color: #4e73df;
+    background-image: linear-gradient(180deg,#4e73df 10%,#224abe 100%);
+    background-size: cover;
+}
+
+.accordion {
+    overflow-anchor: none;
+}
+
+.navbar-nav {
+    display: flex;
+    flex-direction: column;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+    width: 200px; /* 네비게이션 바의 폭 조절 (원하는 크기로 조정) */
+    background-color: #4e73df; /* 배경 색상 변경 */
+}
+
+dl, ol, ul {
+    margin-top: 0;
+}
+
+.sidebar {
+    width: 100%; /* 네비게이션 바 전체 너비 확보 */
+    min-height: 100vh;
+}
+
+.sidebar-dark hr.sidebar-divider {
+    border-top: 1px solid rgba(255,255,255,.15);
+}
+
+.sidebar hr.sidebar-divider {
+    margin: 0 1rem 1rem;
+}
+
+hr{
+	border: 0;
+	box-sizing: content-box;
+    height: 0;
+    overflow: visible;
+	
+}
+
+.bg-gradient-primary {
+    background-color: #4e73df;
+    background-image: linear-gradient(180deg,#4e73df 10%,#224abe 100%);
+    background-size: cover;
+    font-size: 24px; /* 텍스트 크기 조절 */
+}
+
+
