--- a/TicketMvp/.settings/org.eclipse.wst.common.component
+++ b/TicketMvp/.settings/org.eclipse.wst.common.component
@@ -11,14 +11,15 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                        		
-        
-        
-        <property name="java-output-path" value="target/classes"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
                                 
         
         
         <property name="context-root" value="basic"/>
+        <property name="java-output-path" value="/TicketMvp/target/classes"/>
                         	
     
     
