--- a/TicketMvp/src/main/webapp/resources/css/user/userMyModifyForm.css
+++ b/TicketMvp/src/main/webapp/resources/css/user/userMyModifyForm.css
@@ -1,52 +1,119 @@
 @charset "UTF-8";
 
+div.container {
+	
+}
+
+div.insert {
+	
+}
+
+div.create {
+	width: 800px;
+	text-align: center;
+	padding: 30px;
+	border-bottom: 1px solid black;
+	margin: auto;
+}
+
 table {
-	border-collapse: collapse;
-	width : 80%;
-	height: 200px;
-	table-layout:fixed;
-	max-width:800px;
-	min-width:330px;
-	margin-left:auto;
-	margin-right:auto;
-	
+	height: 300px;
+	width: 900px;
+	border-top: 3px solid black;
+	margin-right: auto;
+	margin-left: auto;
 }
+
 td {
-	padding : 10px;
-	border-bottom: 1px solid #CD5C5C;
-	
+	border-bottom: 1px dotted black;
 }
 
-tr:hover{
-	background-color : #F5F5F5;
+caption {
+	text-align: left;
 }
 
-.title{
-	width: 30%;
+.col1 {
+	background-color: #e8e8e8;
+	padding: 10px;
+	text-align: right;
+	font-weight: bold;
+	font-size: 0.8em;
 }
 
-.lastcan {
-	border-bottom:none;
+.col2 {
+	text-align: left;
+	padding: 5px;
 }
 
-tr,td,input {
-	font-size:16px;
-	width:100%;
+.but1 {
+	height: 25px;
+	width: 80px;
+	color: white;
+	background-color: black;
+	border-color: black;
+}
+
+.but2 {
+	height: 27px;
+	width: 120px;
+	color: white;
+	background-color: black;
+	border-color: black;
+}
+
+.but3 {
+	height: 35px;
+	width: 150px;
+	background-color: white;
+	border: 2px solid black;
+}
+
+.but4 {
+	height: 35px;
+	width: 150px;
+	background-color: white;
+	border: 2px solid black;
+}
+
+.but1:hover {
+	background-color: #b9b9b9;
+	color: black;
+	border: 2px solid black;
+}
+
+.but2:hover {
+	background-color: #b9b9b9;
+	color: black;
+	border: 2px solid black;
+}
+
+.but3:hover {
+	background-color: black;
+	color: white;
+	border: 2px solid black;
+}
+
+.but4:hover {
+	background-color: black;
+	color: white;
+	border: 2px solid black;
+}
+
+p {
+	font-size: 0.7em;
+}
+
+.a {
+	font-size: 0.7em;
+}
+
+.num {
+	color: red;
 }
 
 #userid{
-	border:none;
+	border: none;
+ 	background-color:none;
 }
+ 
 
-button {
-	width:60px;
-
-}
-
-/* div {
-	border : 1px solid #959EA2;
-	background-color: #ffebb5;
-	border-rdius : 16px;
-	box-shadow: inset 0 0 8px #deb13a;
-	width: 160px; height: 160px;
-} */
