--- a/TicketMvp/src/main/webapp/resources/css/user/userInsertUserPage.css
+++ b/TicketMvp/src/main/webapp/resources/css/user/userInsertUserPage.css
@@ -15,6 +15,8 @@ body {
 
 #main-holder {
   width: 60%;
+  max-width:700px;
+  min-width:500px;
   height: 70%;
   display: grid;
   justify-items: center;
@@ -30,10 +32,12 @@ body {
   display: grid;
   justify-items: center;
   align-items: center;
+  min-width:380px;
 }
 
 
 #tbuserinput{
+  width: 500px;
   width: 100%;
   height: 100%;
   justify-items: center;
@@ -44,9 +48,11 @@ body {
   color: #3a3a3a;
 }
 
+/* 제목 창 */
 .normalbold.tb_ttl {
 	width : 120px;
 }
+
 
 /* 사용자 입력값 받는 창  */
 .userinput {
