--- a/TicketMvp/src/main/webapp/resources/css/user/userMyModifyForm.css
+++ b/TicketMvp/src/main/webapp/resources/css/user/userMyModifyForm.css
@@ -75,6 +75,13 @@ caption {
 	border: 2px solid black;
 }
 
+.but5 {
+	height: 35px;
+	width: 150px;
+	background-color: white;
+	border: 2px solid black;
+}
+
 .but1:hover {
 	background-color: #b9b9b9;
 	color: black;
@@ -98,6 +105,13 @@ caption {
 	color: white;
 	border: 2px solid black;
 }
+
+.but5:hover {
+	background-color: black;
+	color: white;
+	border: 2px solid black;
+}
+
 
 p {
 	font-size: 0.7em;
