--- a/TicketMvp/src/main/webapp/resources/css/ReserveFinish.css
+++ b/TicketMvp/src/main/webapp/resources/css/ReserveFinish.css
@@ -1,1 +1,72 @@
 @charset "UTF-8";
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin-top: 20px;
+}
+
+
+h1 {
+    color: #333;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.card {
+    border: none;
+    box-shadow: none;
+}
+
+.card-header {
+    background-color: #007BFF;
+    color: #fff;
+    font-weight: bold;
+    border-bottom: 2px solid #0056b3;
+}
+
+.card-body {
+    padding: 20px;
+}
+
+/* Form Group Styles */
+.form-group {
+    margin-bottom: 10px;
+}
+
+.col-sm-4 {
+    font-weight: bold;
+}
+
+.btn-primary {
+    background-color: #007BFF;
+    border: none;
+    border-radius: 3px;
+    color: #fff;
+    padding: 10px 20px;
+    font-weight: bold;
+    margin-right: 10px;
+}
+
+.btn-secondary {
+    background-color: #6c757d;
+    border: none;
+    border-radius: 3px;
+    color: #fff;
+    padding: 10px 20px;
+    font-weight: bold;
+}
+
+.btn-secondary:hover {
+    background-color: #495057;
+}
+
+
