--- a/TicketMvp/src/main/webapp/resources/css/main.css
+++ b/TicketMvp/src/main/webapp/resources/css/main.css
@@ -1,4 +1,4 @@
-* 스타일 파일 (styles.css) */
+/* 스타일 파일 (styles.css) */
 
 /* 전체 페이지 스타일 */
 body {
@@ -23,11 +23,6 @@ body {
 	padding: 100px; /* 푸터와 콘텐츠 사이 여백 조절 */
 }
 
-.header, .login-header, .footer {
-    width: 100%; /* 헤더, 푸터는 화면 너비에 맞게 설정 */
-    max-width: 100%; /* 너비가 100%를 넘지 않도록 설정 */
-}
-
 /* 상단 헤더 스타일 */
 .top-header {
 	background-color: #333;
@@ -48,31 +43,20 @@ body {
 
 /* 로고 및 배너 스타일 */
 .header {
-    display: flex;
-    align-items: center;
-    padding: 20px;
-    justify-content: space-between;
+	display: flex;
+	align-items: center;
+	padding: 20px;
 }
 
+.header .logo img {
+	width: 150px;
+	height: auto;
+	margin-right: 20px;
+}
 
-/* .header .banner img {
-    max-width: 100%;
-} */
-
-.header .logo img,
 .header .banner img {
-    max-width: 100%;
-    max-height: auto;
-}
-
-.header .logo img {
-    max-width: 150px;
-    max-height: auto;
-}
-
-/* 배너 크기를 제한 */
-.header .logo img {
-    max-width: 150px;
+	width: 100%;
+	height: auto;
 }
 
 .login-header {
@@ -107,30 +91,23 @@ body {
 }
 
 .banner {
-	width: 100%; /* 배너 너비 100% */
-	max-width: 100%;
-	max-height: auto;
-	/* height: auto;
+	width: 150%; /* 배너 너비 100% */
+	height: auto;
 	display: flex;
-	justify-content: center; 가운데 정렬
-	align-items: center; 세로 가운데 정렬 */
+	justify-content: center; /* 가운데 정렬 */
+	align-items: center; /* 세로 가운데 정렬 */
 }
 
 /* 메인 콘텐츠 스타일 */
 .main-content {
 	display: flex;
-	 justify-content: space-between;
-}
-
-.flex-container {
-    display: flex;
 }
 
 /* 좌측 메뉴 스타일 */
 .sidebar {
 	background-color: #333;
 	color: white;
-	width: 150px;
+	width: 250px;
 	padding: 20px;
 }
 
@@ -148,54 +125,11 @@ body {
 	text-decoration: none;
 }
 
-.image-grid {
-	flex:1;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
-    padding: 50px;
-    margin-top: 60px;
-    justify-items: stretch; /* 이미지를 셀에 꽉 채우도록 확장 */
-    overflow: auto;
-    max-width: 100%;
-}
-
-#image-grid-container{
-	flex: 1;
-	display: flex;
-}
-
-
-/* 이미지 아이템 스타일 */
-.image-item {
-    border: 1px solid #ddd;
-    overflow: hidden;
-    border-radius: 10px;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%; /* 이미지 아이템의 높이를 100%로 설정 */
-}
-
-.image-item img {
-    width: 100%;
-    height: 100%;
-    max-width: 100%;
-    max-height: 100%;
-    display: block;
-}
-
-.image-item:hover img {
-    transform: scale(1.05);
-}
-
 /* 쇼핑몰 화면 스타일 */
 .shopping-area {
 	flex: 1;
 	padding: 20px;
 	background-color: #fff;
-	
 }
 
 /* Footer Styles */
@@ -221,7 +155,7 @@ body {
 	list-style: none;
 	padding: 0;
 	display: flex;
-	margin-right: 20px;
+	margin-right: 20px; /* 이전에 있던 마진을 여기로 이동 */
 }
 
 .footer_links li {
