--- a/TicketMvp/.settings/org.eclipse.wst.common.component
+++ b/TicketMvp/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                            	
+                                	
+    
     
     
     
@@ -7,7 +8,8 @@
     
     
     <wb-module deploy-name="basic-1.0.0-BUILD-SNAPSHOT">
-                                                                
+                                                                        
+        
         
         
         
@@ -15,7 +17,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                        		
+                                                                		
+        
         
         
         
@@ -23,14 +26,18 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                        
+                                                
+        
         
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                
+                        
+        
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
+                                                                        
+        
         
         
         
@@ -38,12 +45,14 @@
         
         
         <property name="context-root" value="basic"/>
-                                        
+                                                
+        
         
         
         
         <property name="java-output-path" value="/TicketMvp/target/classes"/>
-                                                        	
+                                                                	
+    
     
     
     
@@ -51,7 +60,8 @@
     
     
     </wb-module>
-                            
+                                
+
 
 
 
